IOT-584: Make arrow fully visible in left menu

--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -62,3 +62,8 @@ select+fa-icon {
   background-color: #fff;
   padding-right: 5px;
 }
+
+.mat-expansion-indicator {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
