--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -6,7 +6,7 @@
         <mat-panel-title class="nav-item py-2">
             <p class="nav-item ml-2">{{'NAV.ADMIN' | translate}}</p>
         </mat-panel-title>
-        <mat-panel-description></mat-panel-description>
+        <!-- <mat-panel-description></mat-panel-description> -->
     </mat-expansion-panel-header>
 
     <ul class="navbar-nav flex-column">
