--- a/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
+++ b/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
@@ -35,7 +35,12 @@
               <div class="col-md-4">
                 <ul>
                   <li>
-                    {{relation.dataTarget.name}}
+                    <div *ngIf="relation.payloadDecoder; else noDecoder">
+                      {{relation.payloadDecoder.name}}
+                    </div>
+                    <ng-template #noDecoder>
+                      {{ 'DATATARGET.NO-PAYLOADDECODER' | translate}}
+                    </ng-template>
                   </li>
                 </ul>
               </div>
