Application table pagi and sort

--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -28,7 +28,8 @@
         {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
     </h4>
     <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
-        (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)">
+        (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)"
+        [isLoadingResults]="isLoadingResults">
     </app-applications-table>
 </div>
 
