IOT-502: Show error if user tries to delete a profile in use

--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
@@ -8,7 +8,9 @@
     </div>
 </div>
 <hr>
-
+<div *ngIf="errorMessages" class="error-messages p-3 my-2">
+    {{errorMessages | translate }}
+</div>
 <app-device-profiles-item *ngFor="let deviceProfile of deviceProfiles; let i = index"
     (deleteDeviceProfile)="deleteDeviceProfile($event)" [deviceProfile]="deviceProfile">
 </app-device-profiles-item>
