--- a/src/app/shared/components/forms/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/components/forms/form-body-datatarget/form-body-datatarget.component.html
@@ -55,8 +55,8 @@
       <div *ngIf="datatargetid === 0">
         <h6> {{'QUESTION.DATATARGET.RELATIONS' | translate}} </h6>
       </div>
-      <div class="container row" style="margin-top: 5%" *ngIf="datatargetid > 0">
-        <a (click)="addRow()" class="btn btn-secondary">{{'QUESTION.ADD-RELATIONS' | translate}}</a>
+      <div class="container row" class="mt-3" *ngIf="datatargetid > 0">
+        <a (click)="addRow()" class="btn btn-secondary my-2">{{'QUESTION.ADD-RELATIONS' | translate}}</a>
         <ng-container *ngIf="devices && payloadDecoders && payloadDeviceDatatarget?.length > 0">
           <table class="table table-striped table-bordered">    
             <tbody>    
@@ -119,6 +119,6 @@
       </div>
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-        <button class="btn btn-dark ml-2" type="submit">{{ submitButton }}</button>
+        <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
       </div>
 </form>
