--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -123,3 +123,7 @@ $OS2IoT-frontend-theme: mat-light-theme($OS2IoT-frontend-primary, $OS2IoT-fronte
   opacity: 1 !important;
   // transform: translateY(25%) !important;
 }
+
+.mat-elevation-z8{
+  margin:0;
+}
