--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -36,5 +36,5 @@
     <h4 class="">
         {{ 'PERMISSION.DETAIL.USERS' | translate }}
     </h4>
-    <app-user-table [users]="users"></app-user-table>
+    <app-user-table [users]="users" [isLoadingResults]="isLoadingResults"></app-user-table>
 </div>
