--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -9,7 +9,7 @@
                 {{ 'PERMISSION.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
-                <a (click)="routeToPermissions()" routerLinkActive="active" class="permission-link">
+                <a (click)="routeToPermissions(element)" routerLinkActive="active" class="permission-link">
                     {{element.name}}</a>
             </td>
         </ng-container>
