--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<!-- <div class="table-responsive">
     <table class="table">
         <thead>
             <tr>
@@ -15,4 +15,89 @@
             </tr>
         </tbody>
     </table>
+</div> -->
+
+
+<div class="mat-elevation-z8">
+    <app-loading-spinner *ngIf=" isLoadingResults">
+    </app-loading-spinner>
+    <table mat-table [dataSource]="dataSource" matSort>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ 'USERS.NAME' | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <a [routerLink]="[element.id]" routerLinkActive="active" class="application-link">
+                    {{element.name}}</a>
+            </td>
+        </ng-container>
+
+        <!-- email Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'USERS.EMAIL' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                <p>{{element.email}}</p>
+            </td>
+        </ng-container>
+
+        <!-- global admin Column -->
+        <ng-container matColumnDef="global">
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'USERS.GLOBALADMIN' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                <p>{{((element.permissions | isGlobalAdmin) ? 'USERS.GLOBAL_ADMIN.TRUE' : 'USERS.GLOBAL_ADMIN.FALSE') | translate}}
+                </p>
+            </td>
+        </ng-container>
+
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'USERS.STATUS' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+
+                <p [ngClass]="element.active | activeDeactive">{{element.active | activeDeactive}}</p>
+            </td>
+        </ng-container>
+
+        <!-- Login Column -->
+        <ng-container matColumnDef="login">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ 'USERS.LOGIN' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                <div *ngIf="element.lastLogin; else noLogin">
+                    <P> {{element.lastLogin | date}}</P>
+                </div>
+                <ng-template #noLogin>
+                    <P>Ikke logget på endnu</P>
+                </ng-template>
+            </td>
+        </ng-container>
+
+        <!-- Menu Column -->
+        <ng-container matColumnDef="menu">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div class="dropdown ">
+                    <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
+                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                    <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                        <li class="dropdown-item">
+                            <a [routerLink]="[element.id, 'edit-user']"
+                                routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [length]="resultsLength" showFirstLastButtons></mat-paginator>
 </div>
