--- a/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
@@ -91,7 +91,7 @@
             <div class="form-group">
                 <mat-checkbox id="reportDevStatusBattery" name="reportDevStatusBattery"
                     [(ngModel)]="serviceProfile.reportDevStatusBattery">
-                    <label for="name" class="form-check-label text--bold"
+                    <label for="reportDevStatusBattery-input" class="form-check-label text--bold"
                         style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}</label>
                 </mat-checkbox>
             </div>
@@ -108,7 +108,7 @@
             <div class="form-group">
                 <mat-checkbox id="reportDevStatusMargin" name="reportDevStatusMargin"
                     [(ngModel)]="serviceProfile.reportDevStatusMargin">
-                    <label for="name" class="form-check-label text--bold"
+                    <label for="reportDevStatusMargin-input" class="form-check-label text--bold"
                         style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYMARGIN' | translate}}</label>
                 </mat-checkbox>
             </div>
