Styling and cleaning of top bar and search

--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -1,4 +1,4 @@
-<app-top-bar-single [data]="permission" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
+<app-top-bar *ngIf="permission" [data]="permission" [backButton]="backButton" [subPage]="true"></app-top-bar>
 
 <div class=" jumbotron m-md-4 p-md-3" *ngIf="permission">
     <div class="row">
