--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -1,4 +1,4 @@
-<app-top-bar-single [data]="organisation" [backButton]="backButton"></app-top-bar-single>
+<app-top-bar *ngIf="organisation" [data]="organisation" [backButton]="backButton" [subPage]="true"></app-top-bar>
 
 <div class=" jumbotron m-md-4 p-md-3" *ngIf="organisation">
     <div class="row">
