--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="application">
-  <app-top-bar-single [data]="application" [backButton]="backButton" [buttons]="buttons"></app-top-bar-single>
+  <app-top-bar [data]="application" [backButton]="backButton" [subPage]="true"></app-top-bar>
   <div class="jumbotron my-4 m-md-4 py-3 p-md-3">
     <div class="row">
       <div class="col-md-8 ">
