--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-    <app-top-bar-single [backButton]="backButton" [staticTitle]="'Import af .csv'"></app-top-bar-single>
+    <app-top-bar [backButton]="backButton" [staticTitle]="'Import af .csv'"></app-top-bar>
 </ng-container>
 <div class="row">
     <div class="col-12">
