--- a/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
+++ b/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="datatarget">
-  <app-top-bar-single [data]="datatarget" [backButton]="backButton"></app-top-bar-single>
+  <app-top-bar [data]="datatarget" [backButton]="backButton" [subPage]="true"></app-top-bar>
   <div class=" jumbotron m-md-4 p-md-3">
     <div class="application-component">
       <h4>{{ 'DATATARGET.NAME' | translate }}</h4>
@@ -10,7 +10,7 @@
       <p class="mb-5">{{datatarget.timeout}}</p>
       <h4>{{ 'DATATARGET.TYPE' | translate }}</h4>
       <p class="mb-5">{{datatarget.type | translate}}</p>
-      
+
       <h4>{{ 'DATATARGET.AUTHORIZATIONHEADER' | translate }}</h4>
       <div *ngIf="datatarget.authorizationHeader; then showAuthHeader else showNoAuthText">
       </div>
@@ -23,9 +23,9 @@
 
       <div class="form-group mt-3">
         <h4>{{ 'DATATARGET.RELATIONS' | translate }}</h4>
-      <div *ngIf="dataTargetRelations?.length === 0">
-        <p>{{'DATATARGET.NO-RELATIONS' | translate}}</p>
-      </div>
+        <div *ngIf="dataTargetRelations?.length === 0">
+          <p>{{'DATATARGET.NO-RELATIONS' | translate}}</p>
+        </div>
         <div *ngIf="dataTargetRelations">
           <div *ngFor="let relation of dataTargetRelations">
             <div class="row my-3">
