--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="device">
-    <app-top-bar-single [data]="device" [backButton]="backButton"></app-top-bar-single>
+    <app-top-bar [data]="device" [backButton]="backButton" [subPage]="true"></app-top-bar>
 </ng-container>
 <div class="jumbotron my-4 m-md-4 py-3 p-md-3">
     <div class="row">
