--- a/src/app/shared/components/map/map.component.html
+++ b/src/app/shared/components/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="map-container">
     <div class="map-frame">
-      <div id="map"></div>
+      <div class="map" id="{{mapId}}"></div>
     </div>
 </div>
