IOT-43: Login using KOMBIT adgangsstyring

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -25,5 +25,6 @@
                 <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">{{'Login'}}</button>
             </div>
         </form>
+        <a class="btn btn-secondary mt-4" href="{{getKombitLoginUrl()}}">{{'AUTH.KOMBIT-BUTTON' | translate}}</a>
     </div>
 </div>
