--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -50,7 +50,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
         {{ 'IOT-TABLE.ACTIVE' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">{{lastActive()}}</td>
+      <td mat-cell *matCellDef="let element">{{lastActive(element)}}</td>
     </ng-container>
 
     <ng-container matColumnDef="menu">
