--- a/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/organisation-dropdown.component.html
@@ -19,7 +19,7 @@
         </a>
         <fa-icon [icon]="faToolbox" class="navbar-icon"></fa-icon>
     </li>
-    <div *ngIf="user && isOrganisationAdmin(orgSelect.value)">
+    <div *ngIf="user && isOrgAdmin">
         <li class="nav-item">
             <a routerLink="/admin/users" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
                 {{'NAV.USERS' | translate}}
