--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -1,17 +1,15 @@
 <h1 mat-dialog-title>{{'DIALOG.SAVE.TITLE' | translate}}</h1>
 <div mat-dialog-content>
-    {{dialogModel.message}}
+    {{'DIALOG.DELETE.MESSAGE' | translate}}
 </div>
 <div mat-dialog-actions>
     <button click="close()" 
-        *ngIf="dialogModel.showCancel" 
         mat-button 
         mat-dialog-close 
         class="btn btn-primary ml-2">
             {{'DIALOG.CLOSE' | translate}}
     </button>
-    <button
-        *ngIf="dialogModel.showAccept" 
+    <button 
         [mat-dialog-close]="true" 
         mat-button
         mat-dialog-close 
