--- a/src/app/shared/components/forms/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/components/forms/form-body-datatarget/form-body-datatarget.component.html
@@ -105,7 +105,7 @@
                   </div>
                 </td>
                 <td>
-                  <a (click)="deleteRow(i)">
+                  <a (click)="openDeleteDialog(i)">
                     <div class="text-center m-2">
                         <fa-icon [icon]="faTimesCircle"></fa-icon>
                         <p>{{'DATATARGET.DELETE' | translate}}</p>
