IOT-749 - fixed paginator, added sort on statistics, start with latest date

--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -27,8 +27,7 @@
     <h4 class="">
         {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
     </h4>
-    <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
-        (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)"
+    <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)"
         [isLoadingResults]="isLoadingResults">
     </app-applications-table>
 </div>
