--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -3,8 +3,7 @@
 </app-top-bar>
 
 <div class="m-md-4 p-md-3">
-  <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
-    (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)"
+  <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)"
     [isLoadingResults]="isLoadingResults">
   </app-applications-table>
 </div>
