IOT-697 - add dialog to delte sigfox device

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
 </div>
-<mat-tab-group animationDuration="200ms" class=" jumbotron m-md-4 p-md-3">
+<mat-tab-group animationDuration="200ms" class=" jumbotron m-md-4 p-md-3" *ngIf="device">
     <mat-tab label="{{'IOTDEVICE.DETAIL-TAB' | translate}}">
         <div class="jumbotron m-md-4 p-md-3">
 
