--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="device">
     <div class="col-md-4">
         <h4>{{ 'IOTDEVICE.TYPE' | translate }}</h4>
         <p class="mb-5">{{ 'IOT-DEVICE-TYPES.' + device.type | translate}}</p>
@@ -31,39 +31,38 @@
             </ul>
         </div>
     </div>
-</div>
+    <h4>{{ 'IOTDEVICE.COMMENT' | translate }}</h4>
+    <div *ngIf="device.comment; then thenBlock else elseBlock"></div>
+    <ng-template #thenBlock>
+        <p class="mb-5">{{device.comment}}</p>
+    </ng-template>
+    <ng-template #elseBlock>
+        <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENT' | translate}}</p>
+    </ng-template>
 
-<h4>{{ 'IOTDEVICE.COMMENT' | translate }}</h4>
-<div *ngIf="device.comment; then thenBlock else elseBlock"></div>
-<ng-template #thenBlock>
-    <p class="mb-5">{{device.comment}}</p>
-</ng-template>
-<ng-template #elseBlock>
-    <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENT' | translate}}</p>
-</ng-template>
-
-<h4>{{ 'IOTDEVICE.LOCATION' | translate }}</h4>
-<div *ngIf="device.location; else locationElseBlock">
-    <app-map [coordinates]="getCoordinates()"></app-map>
-    <div class="row mb-5">
-        <div class="col-6">
-            <h6>{{ 'IOTDEVICE.LONGITUDE' | translate }}</h6>
-            <p>{{longitude}}</p>
-        </div>
-        <div class="col-6">
-            <h6>{{ 'IOTDEVICE.LATITUDE' | translate }}</h6>
-            <p>{{latitude}}</p>
+    <h4>{{ 'IOTDEVICE.LOCATION' | translate }}</h4>
+    <div *ngIf="device.location; else locationElseBlock">
+        <app-map [coordinates]="getCoordinates()"></app-map>
+        <div class="row mb-5">
+            <div class="col-6">
+                <h6>{{ 'IOTDEVICE.LONGITUDE' | translate }}</h6>
+                <p>{{longitude}}</p>
+            </div>
+            <div class="col-6">
+                <h6>{{ 'IOTDEVICE.LATITUDE' | translate }}</h6>
+                <p>{{latitude}}</p>
+            </div>
         </div>
     </div>
-</div>
-<ng-template #locationElseBlock>
-    <p class="mb-5">{{ 'IOTDEVICE.NOLOCATION' | translate}}</p>
-</ng-template>
+    <ng-template #locationElseBlock>
+        <p class="mb-5">{{ 'IOTDEVICE.NOLOCATION' | translate}}</p>
+    </ng-template>
 
-<h4>{{ 'IOTDEVICE.COMMENTONLOCATION' | translate }}</h4>
-<div *ngIf="device.commentOnLocation; else locationCommentElseBlock">
-    <p class="mb-5">{{device.commentOnLocation}}</p>
+    <h4>{{ 'IOTDEVICE.COMMENTONLOCATION' | translate }}</h4>
+    <div *ngIf="device.commentOnLocation; else locationCommentElseBlock">
+        <p class="mb-5">{{device.commentOnLocation}}</p>
+    </div>
+    <ng-template #locationCommentElseBlock>
+        <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENTONLOCATION' | translate}}</p>
+    </ng-template>
 </div>
-<ng-template #locationCommentElseBlock>
-    <p class="mb-5">{{ 'IOTDEVICE.NOCOMMENTONLOCATION' | translate}}</p>
-</ng-template>
