--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -18,7 +18,7 @@
                         </a>
                     </li>
                     <li class="dropdown-item">
-                        <a (click)="clickDelete(element)"
+                        <a (click)="clickDelete()"
                             [routerLink]="">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
                         </a>
                     </li>
