--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -1,60 +1,62 @@
-<ng-container *ngIf="device">
-    <app-top-bar [data]="device" [backButton]="backButton" [subPage]="true"></app-top-bar>
-</ng-container>
-<div class="jumbotron my-4 m-md-4 py-3 p-md-3">
-    <div class="row">
-        <div class="col-12">
-            <app-iot-device-detail-generic [device]="device" [longitude]=longitude [latitude]="latitude">
-            </app-iot-device-detail-generic>
+<div *ngIf="device">
+    <ng-container>
+        <app-top-bar [data]="device" [backButton]="backButton" [subPage]="true"></app-top-bar>
+    </ng-container>
+    <div class="jumbotron my-4 m-md-4 py-3 p-md-3">
+        <div class="row">
+            <div class="col-12">
+                <app-iot-device-detail-generic [device]="device" [longitude]=longitude [latitude]="latitude">
+                </app-iot-device-detail-generic>
+            </div>
         </div>
     </div>
+    <mat-tab-group animationDuration="200ms" class=" jumbotron m-md-4 p-md-3">
+        <mat-tab label="{{'IOTDEVICE.DETAIL-TAB' | translate}}">
+            <div class="jumbotron m-md-4 p-md-3">
+    
+                <!-- IF  Lora device-->
+                <ng-container *ngIf="device.type === 'LORAWAN' && device.lorawanSettings">
+                    <app-iot-device-detail-lorawan [device]="device"></app-iot-device-detail-lorawan>
+                </ng-container>
+                <!-- SIGFOX DEVICE-->
+                <ng-container *ngIf="device.type === 'SIGFOX' && device.sigfoxSettings">
+                    <app-iot-device-detail-sigfox [device]="device"></app-iot-device-detail-sigfox>
+                </ng-container>
+    
+                <h4>{{ 'IOTDEVICE.DATAPACKAGE' | translate }}</h4>
+                <ng-container *ngIf="device.latestReceivedMessage?.sentTime; then sentTime; else noSentTime"></ng-container>
+                <ng-template #sentTime>
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header style="max-width: max-content;">
+                            <mat-panel-title>
+                                <p>
+                                    {{'IOTDEVICE.LATEST-DATAPACKAGE' | translate}}
+                                    {{device.latestReceivedMessage?.sentTime | date:'medium'}}
+                                </p>
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <ng-container *ngIf="device.latestReceivedMessage?.rawData">
+                            <code>
+                                <pre>{{device.latestReceivedMessage.rawData | json }}</pre>
+                            </code>
+                        </ng-container>
+                    </mat-expansion-panel>
+                </ng-template>
+                <ng-template #noSentTime>
+                    <p class="mb-5">
+                        {{'IOTDEVICE.NO-DATAPACKAGE' | translate}}
+                    </p>
+                </ng-template>
+                <!-- API -->
+                <ng-container *ngIf="device.type === 'GENERIC_HTTP'">
+                    <h4>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</h4>
+                    <!-- <p>{{ 'IOTDEVICE.GENERIC_HTTP.INSTRUCTIONS' | translate }}</p> -->
+                    <pre>{{ getGenericHttpDeviceUrl(device) }}</pre>
+                </ng-container>
+            </div>
+        </mat-tab>
+        <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}">
+            <app-downlink [device]="device" [errorMessages]="errorMessages"></app-downlink>
+        </mat-tab>
+    </mat-tab-group>
 </div>
-<mat-tab-group animationDuration="200ms" class=" jumbotron m-md-4 p-md-3" *ngIf="device">
-    <mat-tab label="{{'IOTDEVICE.DETAIL-TAB' | translate}}">
-        <div class="jumbotron m-md-4 p-md-3">
-
-            <!-- IF  Lora device-->
-            <ng-container *ngIf="device.type === 'LORAWAN' && device.lorawanSettings">
-                <app-iot-device-detail-lorawan [device]="device"></app-iot-device-detail-lorawan>
-            </ng-container>
-            <!-- SIGFOX DEVICE-->
-            <ng-container *ngIf="device.type === 'SIGFOX' && device.sigfoxSettings">
-                <app-iot-device-detail-sigfox [device]="device"></app-iot-device-detail-sigfox>
-            </ng-container>
-
-            <h4>{{ 'IOTDEVICE.DATAPACKAGE' | translate }}</h4>
-            <ng-container *ngIf="device.latestReceivedMessage?.sentTime; then sentTime; else noSentTime"></ng-container>
-            <ng-template #sentTime>
-                <mat-expansion-panel>
-                    <mat-expansion-panel-header style="max-width: max-content;">
-                        <mat-panel-title>
-                            <p>
-                                {{'IOTDEVICE.LATEST-DATAPACKAGE' | translate}}
-                                {{device.latestReceivedMessage?.sentTime | date:'medium'}}
-                            </p>
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <ng-container *ngIf="device.latestReceivedMessage?.rawData">
-                        <code>
-                            <pre>{{device.latestReceivedMessage.rawData | json }}</pre>
-                        </code>
-                    </ng-container>
-                </mat-expansion-panel>
-            </ng-template>
-            <ng-template #noSentTime>
-                <p class="mb-5">
-                    {{'IOTDEVICE.NO-DATAPACKAGE' | translate}}
-                </p>
-            </ng-template>
-            <!-- API -->
-            <ng-container *ngIf="device.type === 'GENERIC_HTTP'">
-                <h4>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</h4>
-                <!-- <p>{{ 'IOTDEVICE.GENERIC_HTTP.INSTRUCTIONS' | translate }}</p> -->
-                <pre>{{ getGenericHttpDeviceUrl(device) }}</pre>
-            </ng-container>
-        </div>
-    </mat-tab>
-    <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}">
-        <app-downlink [device]="device" [errorMessages]="errorMessages"></app-downlink>
-    </mat-tab>
-</mat-tab-group>
