IOT-744 - fixed name

--- a/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
+++ b/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
@@ -6,7 +6,7 @@
         <div class="btn-group float-md-right dropdown">
             <button type="button" id="dropdown-{{ datatarget.name }}" class="btn btn-primary dropdown-toggle"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{'LORA-GATEWAY-TABLE-ROW.SHOW-OPTIONS' | translate}} <span class="caret"></span>
+                {{'DATATARGET.SHOW-OPTIONS' | translate}} <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" attr.aria-labelledby="dropdown-{{ datatarget.name }}">
                 <li class="dropdown-item">
