--- a/src/app/device-model/device-model-list/device-model-list.component.html
+++ b/src/app/device-model/device-model-list/device-model-list.component.html
@@ -1,5 +1,5 @@
 <app-top-bar [title]="'NAV.DEVICE-MODEL' | translate"
-  [ctaLabel]="'FORM.CREATE-NEW-DEVICE-MODEL' | translate" [ctaRouterLink]="'gateway-edit'">
+  [ctaLabel]="'FORM.CREATE-NEW-DEVICE-MODEL' | translate" [ctaRouterLink]="'device-model-edit'">
 </app-top-bar>
 
 <div class="m-md-4 p-md-3">
