--- a/src/app/applications/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
+++ b/src/app/applications/datatarget/datatarget-tabel-row/datatarget-tabel-row.component.html
@@ -12,10 +12,10 @@
     <ul class="dropdown-menu" attr.aria-labelledby="tableRowDropdown-{{datatarget.id}}">
       <li class="dropdown-item">
         <a [routerLink]="['datatarget-edit', datatarget.id]"
-          routerLinkActive="active">{{ 'DATATARGET-TABLE-ROW.EDIT' | translate }}</a>
+          routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
       </li>
       <li class="dropdown-item">
-        <a (click)="clickDelete()" [routerLink]="">{{ 'DATATARGET-TABLE-ROW.DELETE' | translate }}</a>
+        <a (click)="clickDelete()" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
       </li>
     </ul>
   </div>
