--- a/src/app/search/search-table/search-table.component.html
+++ b/src/app/search/search-table/search-table.component.html
@@ -39,7 +39,7 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
                         {{ 'SEARCH.NAME' | translate }}</th>
                     <td mat-cell *matCellDef="let element">
-                        <a class="application-link" (click)="goToResult()">{{element.name}}</a>
+                        <a class="application-link" (click)="goToResult(element)">{{element.name}}</a>
                     </td>
                 </ng-container>
                 <!-- Id Column -->
