IOT-770 fixed row width and updated bootstrap

--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <div class="row top-bar-wrapper">
-  <div class="col-12 top-bar ">
-    <div class="row">
+  <div class="top-bar">
+    <div class="row col-12">
       <div class="col-md-8 top-bar--menu">
         <!-- Breadcrumb -->
         <nav class="top-bar--menu--breadcrumb">
@@ -44,9 +44,5 @@
           </mat-form-field>
         </form>
       </div>
-
-
-
     </div>
-
   </div>
