--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -29,7 +29,7 @@
                 {{ 'USERS.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
-                <a [routerLink]="[element.id]" routerLinkActive="active" class="application-link">
+                <a [routerLink]="['/admin/users', element.id]" routerLinkActive="active" class="application-link">
                     {{element.name}}</a>
             </td>
         </ng-container>
